K8S/enrollment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enrollment-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: enrollmentservice
  template:
    metadata:
      labels:
        app: enrollmentservice
    spec:
      containers:
        - name: enrollmentservice
          image: kiet2003/enrollmentservice:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: enrollment-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: enrollmentservice
  ports:
    - name: enrollmentservice
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: enrollmentgrpc
      protocol: TCP
      port: 666
      targetPort: 666
