K8S/kafka-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.5.1
          ports:
            - containerPort: 9092
            - containerPort: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-nodeport
spec:
  type: NodePort
  selector:
    app: kafka
  ports:
    - name: external
      protocol: TCP
      port: 9094
      targetPort: 9094
      nodePort: 32000
