K8S/student-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: studentservice
  template:
    metadata:
      labels:
        app: studentservice
    spec:
      containers:
        - name: studentservice
          image: kiet2003/studentservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: student-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: studentservice
  ports:
    - name: studentservice
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: studentgrpc
      protocol: TCP
      port: 666
      targetPort: 666
