K8S/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: kiet2003/userservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
    - name: userservice
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: usergrpc
      protocol: TCP
      port: 666
      targetPort: 666
