K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/u/
            pathType: Prefix
            backend:
              service:
                name: user-clusterip-srv
                port:
                  number: 80
          - path: /grpc/u/
            pathType: Prefix
            backend:
              service:
                name: user-clusterip-srv
                port:
                  number: 666
          - path: /api/c/
            pathType: Prefix
            backend:
              service:
                name: course-clusterip-srv 
                port:
                  number: 80
          - path: /grpc/c/
            pathType: Prefix
            backend:
              service:
                name: course-clusterip-srv
                port:
                  number: 666
          - path: /api/m/
            pathType: Prefix
            backend:
              service:
                name: major-clusterip-srv 
                port:
                  number: 80
          - path: /grpc/m/ 
            pathType: Prefix
            backend:
              service:
                name: major-clusterip-srv
                port:
                  number: 666
          - path: /api/s/
            pathType: Prefix
            backend:
              service:
                name: student-clusterip-srv
                port:
                  number: 80
          - path: /grpc/s/ 
            pathType: Prefix
            backend:
              service:
                name: student-clusterip-srv
                port:
                  number: 666
